<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.HostAddRoom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:textColor="#E21F83B1"
            android:textSize="18sp"
            android:text="@string/create_room"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/room_number"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:id="@+id/roomNumberTxt2" />

            <EditText
                android:id="@+id/roomNumber2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_detail"
            android:textColor="#E21F83B1"
            android:textSize="18sp"
            android:layout_marginStart="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="Size:" />

            <EditText
                android:id="@+id/roomSize2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="m2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="Smoking:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/smokingTorF2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="Max people:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/pplQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="@string/bed" />


            <Spinner
                android:id="@+id/bedSelection2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/quantity"
                android:gravity="center"
                android:layout_marginStart="20dp" />

            <Spinner
                android:id="@+id/bedQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="@string/bathroom" />

            <Spinner
                android:id="@+id/bathRoomQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Wifi:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/wifiTorF2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Furnitures:"
            android:textColor="#E21F83B1"
            android:textSize="18sp"
            android:layout_marginStart="30dp" />

        <View
            android:layout_width="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="Table:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/tableQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Towel:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/towelQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:gravity="center"
                android:text="Dryer:" />

            <Space
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/dryerQuantity2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/createRoom2"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="Create" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/backBtn2"
                android:layout_gravity="center"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>